--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         <input type="button" value="=" onclick="display.value = eval(display.value)" class="equal operator">
                     </div>
                     <br>
-                    <center><small>Copyright &copy; NauvalYashaF_Calculator</small></center>
+                    <center><small>Copyright &copy; Your Name-Kalkulator</small></center>
                 </form>
             </div>
         </div>
